--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ classifiers = [
     "Programming Language :: Python :: 3.11", # 
     "Programming Language :: Python :: 3.12", # 
 ]
-dependencies = ["numpy", "scipy", "scikit-learn", "rich"]
+dependencies = ["numpy", "pandas", "scipy", "scikit-learn", "rich"]
 
 [project.urls]
 repository = "https://github.com/OrthoFinder/OGtoberfest"
