build: add input_args.json to the toml file

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,6 +74,7 @@ where = ["src"]
 include = ["ogtoberfest*"]
 
 [tool.setuptools.package-data]
+"ogtoberfest" = ["*.json"]
 "ExampleData" = ["*"]
 
 
