feat: add funcs to compute distance

--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,4 @@ OrthoBench/iqtree2_logs/
 OrthoBench/old_predicted_orthogroups/
 OrthoBench/orthobench_proteomes/
 .pre-commit-config.yaml
+Simulation
