feat: update the output information

--- a/.gitignore
+++ b/.gitignore
@@ -172,4 +172,5 @@ OrthoBench/iqtree2_logs/
 OrthoBench/old_predicted_orthogroups/
 OrthoBench/orthobench_proteomes/
 .pre-commit-config.yaml
-Simulation
+Sim*/
+myanalysis/
