--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,7 +61,7 @@ test = ["pytest", "pytest-cov[all]"]
 # pipdeptree -p ogtoberfest --graph-output png > dependency-graph.png
 
 [project.scripts]
-ogtoberfest = "ogtoberfest.main:main"
+ogtoberfest = "ogtoberfest.run.main:main"
 
 [tool.semantic_release]
 version_variable = "pyproject.toml:version"
